--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,15 +10,14 @@
         @apply text-white block border-solid mx-3 font-bold border rounded-md my-2 p-[10px] relative;
 
         &:after {
-            content: "\2B9D";
-            @apply absolute right-2 top-2;
-            display: block;
-            transition: transform 300ms;
+            content: "\02C5";
+            @apply absolute right-2 top-3;
+            font-size: 1.7em;
         }
 
         &.is-open {
             &:after {
-                transform: rotateZ(180deg);
+                content: "\02C4";
             }
         }
     }
